distribution/kpt/podcast-server/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: podcast-server
spec:
  tls:
  - hosts:
    - localhost # {"$kpt-set":"domain"}
    secretName: podcast-server-tls
  rules:
  - host: localhost # {"$kpt-set":"domain"}
    http:
      paths:
      - path: /api
        backend:
          serviceName: backend
          servicePort: 8080
      - path: /actuator
        backend:
          serviceName: backend
          servicePort: 8080
      - path: /data
        backend:
          serviceName: fs
          servicePort: 80
      - backend:
          serviceName: ui
          servicePort: 80
